set initial focus to user input field

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
     </style>
   </head>
 
-<body>
+<body onload="$('#username').focus()">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
